--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/italloramon" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/italloramon" target="_blank">Itallo Ramon</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
